# ai-education-analytics

./: .env.example  .gitignore  README.md  app.js  edu_copilot.db  gamma_prompt.txt  index.html  pyproject.toml  requirements.txt  style.css
data/sample/: sample_timeseries.csv  student_records.csv  teacher_notes_101.txt
docs/: architecture.md  business_model.md
scripts/: generate_samples.py  reset_db.py  seed_sample_data.py  setup_db.py  verify_pipeline.py
src/edu_copilot/: __init__.py  app.py  config.py
src/edu_copilot/data/: schemas.py
src/edu_copilot/data/loaders/: audio_loader.py  image_loader.py  pdf_loader.py  tabular_loader.py  text_loader.py  timeseries_loader.py
src/edu_copilot/data/preprocessing/: audio_preprocessing.py  image_preprocessing.py  (+3 more)
src/edu_copilot/db/: models.py  session.py
src/edu_copilot/hitl/: review_queue.py  workflow.py
src/edu_copilot/llm/: embeddings.py  providers.py
src/edu_copilot/models/: ann_model.py  cnn_model.py  evaluate.py  export_onnx.py  fusion.py  rnn_model.py  train.py
src/edu_copilot/pages/: 1_upload_data.py  2_predictions.py  3_hitl_review.py  4_explainability.py  5_reports.py  6_business_model.py  6_dashboard_mockup.py
src/edu_copilot/reports/: docx_report.py  pdf_report.py  report_data.py
src/edu_copilot/vectorstore/: qdrant_client.py
src/edu_copilot/xai/: attention_explainer.py  confidence.py  feature_importance.py  gradcam_stub.py  shap_explainer.py
tests/: conftest.py
tests/integration/: test_end_to_end_pipeline.py
tests/unit/: test_ann_model.py  test_hitl_workflow.py  test_xai.py
(+17 files in other folders)
